Clean up requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,5 @@ pillow
 GroupyAPI
 beautifulsoup4
 
-skbuild
-boost==0.1
-cmake==0.7.1
-boost-py
+cmake
 face_recognition_models
-face_recognition
-dlib>=19.3.0
