--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ cmake
 face_recognition
 scikit-image
 
--e git://github.com/ErikBoesen/ocr_space.git#egg=ocr_space
+git+git://github.com/ErikBoesen/ocr_space.git#egg=ocr_space
