Add tests in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ jobs:
   include:
     - stage: style
       script: ./style_test.sh
+    - stage: unittest
+      script: ./unittests.py
 cache: pip
 
