--- a/serverless.yml
+++ b/serverless.yml
@@ -3,12 +3,18 @@ frameworkVersion: '3'
 
 provider:
   name: aws
-  runtime: python3.8
-
-functions:
-  hello:
-    handler: handler.hello
+  runtime: python3.9
 
 plugins:
   - serverless-wsgi
   - serverless-python-requirements
+custom:
+ wsgi:
+   app: bot.app
+   packRequirements: false
+functions:
+ app:
+   handler: wsgi_handler.handler
+   events:
+     - http: ANY /
+     - http: 'ANY /{proxy+}'
